--- a/.env.local.example
+++ b/.env.local.example
@@ -1,21 +1,17 @@
-# Environment Variables Example
-# Copy this file to .env.local and fill in your values
-
 # Next.js App Configuration
 NEXTAUTH_URL=http://localhost:3001
-NEXTAUTH_SECRET=your-nextauth-secret-here
+NEXTAUTH_SECRET=A247DB24-C8AE-4B8A-8CB2-59637754BF2F
 
 # Backend API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
-NEXT_PUBLIC_BACKEND_URL=http://localhost:5180
-NEXT_PUBLIC_BACKEND_API_URL=http://localhost:5180
-
-# Authentication Providers
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
+NEXT_PUBLIC_BACKEND_URL=https://localhost:7122
+NEXT_PUBLIC_BACKEND_API_URL=https://localhost:7122
 
 # JWT Configuration
-JWT_SECRET=your-jwt-secret-here
+JWT_SECRET=A247DB24-C8AE-4B8A-8CB2-59637754BF2F
 
 # API Configuration
 API_TIMEOUT=30000
+
+# SSL Configuration (Desarrollo solamente - Ignorar certificados auto-firmados)
+NODE_TLS_REJECT_UNAUTHORIZED=0
